result-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress 
spec:
  rules:
  - host: "result.example.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: result-service
            port:
              number: 80
